--- a/music_controller/music_controller_frontend/package.json
+++ b/music_controller/music_controller_frontend/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
